Use fixed positioning for pagination controls
Also fix issue with double scrollbars on the right for explorer views.

https://www.pivotaltracker.com/story/show/143656745

--- a/client/assets/sass/_list-view.sass
+++ b/client/assets/sass/_list-view.sass
@@ -22,6 +22,7 @@
 
     &.paged-container
       height: calc(100vh - 237px)
+      overflow-y: hidden
 
 .list-view-pf
   line-height: 45px
